--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,19 @@
 body {
     font-family: 'Share Tech Mono', monospace;
-    background-color: #000;
+    background-color: rgb(15, 15, 15);
     color: #0f0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
-    font-size: 30px;
-    background-color: rgb(15, 15, 15);
+    font-size: 1.5vw;
 }
 
 #terminal {
-    padding: 20px;
+    padding: 2vh 2vw;
     width: 55vw;
     height: 85vh;
-    max-width: 1350px;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -24,15 +22,17 @@ body {
 
 #header {
     text-align: left;
+    margin-bottom: 0.5vh;
 }
 
 #attempts {
     display: flex;
+    margin-bottom: 1vh;
 }
 
 #attempt-blocks {
     display: inline-block;
-    margin-left: 10px;
+    margin-left: 1vw;
 }
 
 #game-container {
@@ -45,22 +45,23 @@ body {
 #columns {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
-    width: 75%;
-    height: auto;
+    width: 100%;
+    height: 100%;
 }
 
 #column1, #column2 {
-    width: 50%;
+    width: 48%;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
 }
 
 #selection-history {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 35%;
+    width: 30%;
+    height: 100%;
 }
 
 #selection-history-top {
@@ -71,9 +72,9 @@ body {
 }
 
 #selection-history-bottom {
-    height: 5%;
+    height: 10%;
     display: flex;
-    align-items: center;
+    align-items: end;
 }
 
 .blinking-cursor {
@@ -87,23 +88,24 @@ body {
 }
 
 h1 {
-    font-size: 32px;
-    margin: 15px 0;
+    font-size: 2vw;
+    margin: 1vh 0;
 }
 
 h2, h3 {
-    font-size: 30px;
-    margin: 15px 0;
+    font-size: 1.8vw;
+    margin: 1vh 0;
 }
 
 p {
+    font-size: 1.5vw;
     display: inline-block;
-    margin: 2px 0;
-    letter-spacing: 1.5px; /* Spacing between individual letters, helps make the words and characters look more uniform */
+    margin: 0.2vh 0;
+    letter-spacing: 0.1em; /* Spacing between individual letters, helps make the words and characters look more uniform */
 }
 
 .boot-number {
-    letter-spacing: .1px;
+    letter-spacing: 0.1em;
     padding-right: 1ch;
     display: inline-block;
 }
@@ -118,5 +120,73 @@ p {
 }
 
 .history-entry {
-    margin-bottom: 9.5px;
+    margin-bottom: 0.5vh;
+}
+
+@media (max-width: 1024px) {
+    #terminal {
+        width: 90vw;
+        height: 80vh;
+    }
+
+    h1, h2, h3 {
+        font-size: 2.5vw;
+    }
+
+    p {
+        font-size: 2.5vw;
+    }
+}
+
+@media (max-width: 768px) {
+    #terminal {
+        width: 95vw;
+        height: 75vh;
+    }
+
+    #columns {
+        width: 100%;
+    }
+
+    #column1, #column2 {
+        width: 48%;
+    }
+
+    #selection-history {
+        width: 100%;
+        margin-top: 2vh;
+    }
+
+    #selection-history-top, #selection-history-bottom {
+        height: 50%;
+    }
+}
+
+@media (max-width: 480px) {
+    #terminal {
+        width: 95vw;
+        height: 75vh;
+    }
+
+    #columns {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    #column1, #column2 {
+        width: 100%;
+    }
+
+    #selection-history {
+        width: 100%;
+        margin-top: 2vh;
+    }
+
+    #selection-history-top, #selection-history-bottom {
+        height: 50%;
+    }
+
+    h1, h2, h3, p {
+        font-size: 3vw;
+    }
 }
