--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,13 @@
 body {
     font-family: 'Share Tech Mono', monospace;
-    background-color: rgb(15, 15, 15);
+    font-size: 1.5vw;
+    background-color: #0f0f0f;
     color: #0f0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
-    font-size: 1.5vw;
 }
 
 #terminal {
@@ -22,7 +22,7 @@ body {
 
 #header {
     text-align: left;
-    margin-bottom: 0.5vh;
+    margin-bottom: 2vh;
 }
 
 #attempts {
@@ -37,9 +37,9 @@ body {
 
 #game-container {
     display: flex;
-    flex-grow: 1;
+    /*flex-grow: 1;
     width: 100%;
-    height: 100%;
+    height: 100%;*/
 }
 
 #columns {
@@ -66,13 +66,13 @@ body {
 
 #selection-history-top {
     flex-grow: 1;
-    overflow-y: auto;
+    overflow-y: none;
     display: flex;
     flex-direction: column-reverse;
 }
 
 #selection-history-bottom {
-    height: 10%;
+    height: 7%;
     display: flex;
     align-items: end;
 }
@@ -88,13 +88,15 @@ body {
 }
 
 h1 {
-    font-size: 2vw;
+    font-size: 1.8vw;
     margin: 1vh 0;
+    font-weight: 100;
 }
 
 h2, h3 {
     font-size: 1.8vw;
     margin: 1vh 0;
+    font-weight: 100;
 }
 
 p {
@@ -120,7 +122,7 @@ p {
 }
 
 .history-entry {
-    margin-bottom: 0.5vh;
+    margin-bottom: 0.2vh;
 }
 
 @media (max-width: 1024px) {
